<resources>
    <string name="app_name">Weather App By Maria</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cities">Cities Weather</string>
    <string name="city_name">City Name</string>
    <string name="weather">weather</string>
    <string name="clouds_image">Clouds Image</string>
    <string name="_23">23</string>
    <string name="_17">17</string>
    <string name="slash">/</string>
    <string name="alert">Alert!</string>
    <string name="content_descrpition_app_icon">content descrpition app icon</string>
    <string name="get_started">Get Started</string>
    <string name="precipitation">Precipitation</string>
    <string name="_30">30%</string>
    <string name="humidity">Humidity</string>
    <string name="_9km_h">9km/h</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="islamabad">Islamabad</string>
    <string name="search">Enter City Name</string>
    <string name="feels_like">Feels Like</string>
    <string name="temperature">%s\u00B0</string>
    <string name="feels_like_value">%s\u00B0</string>
    <string name="humidity_format">%d%%</string>
    <string name="sea_level">Sea Level</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_format">%d mb</string>
</resources>